--- a/src/app/components/card-free-house/card-free-house.component.html
+++ b/src/app/components/card-free-house/card-free-house.component.html
@@ -1,9 +1,4 @@
-<div
-  class="card m-2"
-  style="width: 18rem"
-  [ngClass]="{ borderSelected: isSelected, borderNone: !isSelected }"
-  (click)="onSelected()"
->
+<div class="card m-2" style="width: 18rem" (click)="onSelected()">
   <img class="card-img-top" src="{{ freeHouse.houseImg }}" alt="img_house" />
   <div class="info-card pt-2">
     <p><strong>Interno: </strong> {{ freeHouse.interno }}</p>
