--- a/src/app/sections-backoffice/section-bacheca-admin/section-bacheca-admin.component.html
+++ b/src/app/sections-backoffice/section-bacheca-admin/section-bacheca-admin.component.html
@@ -1,21 +1,26 @@
 <h2 class="mt-5">Bacheca Generale</h2>
 <app-table-notification [notficationsList]="notifications" />
 
-<form class="mt-5" [formGroup]="dataForm">
+<form class="mt-5" [formGroup]="dataForm" (ngSubmit)="onSubmit()">
   <h3>Crea un nuovo messaggio</h3>
   <div>
     <label for="text">Messaggio:</label>
     <br />
-    <input type="text" id="text" for="text" formControlName="text" />
+    <textarea
+      type="text"
+      id="text"
+      for="text"
+      formControlName="text"
+    ></textarea>
   </div>
   <div>
     <label for="user">Destinatario:</label>
     <select class="form-select" formControlName="user">
       <option selected></option>
       <option value="">Tutti</option>
-      @for (user of listUsers; track user) {
-      <option value="{{ user.id }}">{{ user.name }} {{ user.surname }}</option>
-      }
+      <option *ngFor="let user of listUsers" [ngValue]="user.id">
+        {{ user.name }} {{ user.surname }}
+      </option>
     </select>
   </div>
   <button class="btn btn-primary mt-3">Invia</button>
