--- a/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.html
+++ b/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.html
@@ -224,7 +224,7 @@
   <button
     type="submit"
     class="btn btn-primary m-3"
-    [disabled]="!dataFormUser.valid && houseSelected != null"
+    [disabled]="!dataFormUser.valid"
   >
     Salva
   </button>
