--- a/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
+++ b/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
@@ -1,4 +1,4 @@
-<h3 class="my-3">Lista Case:</h3>
+<h2 class="my-5">Lista Case</h2>
 <!--inizio SearchBar-->
 <nav class="navbar navbar-light bg-light rounded mb-4">
   <form class="d-flex">
