--- a/src/app/components/card-house-user/card-house-user.component.html
+++ b/src/app/components/card-house-user/card-house-user.component.html
@@ -11,7 +11,12 @@
     <p *ngIf="!userHouse.user"><strong>Proprietario: </strong>nessuno</p>
   </div>
   <div class="d-flex">
-    <app-modal-payment class="mx-2" />
-    <app-modal-usage />
+    <button class="btn btn-primary mx-2">Bollette</button>
+    <button
+      class="btn btn-success"
+      routerLink="/homepage/usageHomepage/{{ userHouse.id }}"
+    >
+      Usi e Consumi
+    </button>
   </div>
 </div>
