--- a/src/app/sections-homepage/usage-homepage/usage-homepage.component.css
+++ b/src/app/sections-homepage/usage-homepage/usage-homepage.component.css
@@ -5,3 +5,11 @@ h2 {
   color: var(--white-EasyHome);
   text-shadow: 6px 7px 9px rgba(0, 0, 0, 0.92);
 }
+form {
+  margin-left: 20%;
+  width: 75%;
+  background-color: var(--blue-EasyHome);
+  color: var(--white-EasyHome);
+  padding: 2%;
+  border-radius: 5px;
+}
