grafh created WIP

--- a/src/app/components/card-house-user/card-house-user.component.html
+++ b/src/app/components/card-house-user/card-house-user.component.html
@@ -11,7 +11,7 @@
     <p *ngIf="!userHouse.user"><strong>Proprietario: </strong>nessuno</p>
   </div>
   <div class="d-flex">
-    <button class="btn btn-primary mx-2">Bollette</button>
+    <button class="btn btn-primary mx-2">Pagamenti</button>
     <button
       class="btn btn-success"
       routerLink="/homepage/usageHomepage/{{ userHouse.id }}"
