--- a/src/app/sections-homepage/usage-homepage/usage-homepage.component.html
+++ b/src/app/sections-homepage/usage-homepage/usage-homepage.component.html
@@ -1,6 +1,4 @@
 <h2 class="my-5">Usi E Consumi</h2>
-<div id="main" style="width: 300px; height: 300px; margin-left: 20%"></div>
-
 <h2>Aggiungi Consumi</h2>
 <form
   [formGroup]="dataForm"
@@ -62,3 +60,4 @@
     Invia
   </button>
 </form>
+<app-graph [usages]="usageList" />
