--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,1 +1,1 @@
-<div id="main" style="width: 300px; height: 300px; margin-left: 20%"></div>
+<div [id]="graphId" style="width: 300px; height: 300px; margin-left: 20%"></div>
