--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,1 +1,2 @@
-<div [id]="graphId" style="width: 300px; height: 300px; margin-left: 20%"></div>
+<div [id]="graphId" style="width: 30vw; height: 50vh"></div>
+<h3 class="text-center">{{ title }}</h3>
