--- a/src/app/components/table-notification/table-notification.component.html
+++ b/src/app/components/table-notification/table-notification.component.html
@@ -11,7 +11,7 @@
     <tbody>
       <tr *ngFor="let notification of notficationsList">
         <td>{{ notification.text }}</td>
-        <td>{{ notification.date | date : "dd/MM/yy" }}</td>
+        <td>{{ notification.date | date : "dd/MM/yy HH:mm" }}</td>
         <td *ngIf="notification.user">
           {{ notification.user.name }}
           {{ notification.user.surname }}
