--- a/src/app/pages/login-page/login-page.component.css
+++ b/src/app/pages/login-page/login-page.component.css
@@ -46,3 +46,11 @@ span svg {
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0);
   }
 }
+
+/*Media query per Ipad*/
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  #login {
+    width: 50vw;
+    height: 50vh;
+  }
+}
