--- a/src/app/sections-homepage/section-show-user-house-homepage/section-show-user-house-homepage.component.html
+++ b/src/app/sections-homepage/section-show-user-house-homepage/section-show-user-house-homepage.component.html
@@ -1,7 +1,8 @@
-<h2 class="mt-3">Le mie case:</h2>
+<h2 class="mt-3 titleEasyHome my-5 pt-3">La mia casa</h2>
 <div class="d-flex">
   @for (house of houses; track house.id) {
-  <app-card-house-user class="m-2" [userHouse]="house" />
+  <!-- <app-card-house-user class="m-2" [userHouse]="house" /> -->
+  <app-card-house-homepage [userHouse]="house" />
   } @if (message) {
   <h2>Non ci sono case!</h2>
   }
