--- a/src/app/components/table-payments/table-payments.component.html
+++ b/src/app/components/table-payments/table-payments.component.html
@@ -26,7 +26,6 @@
             class="btn btn-primary"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
-            (click)="openModal()"
           >
             paga
           </button>
@@ -36,12 +35,32 @@
   </tbody>
 </table>
 
-@if (isOpen) {
-<p>
-  You can pass an existing component as content of the modal window. In this
-  case, if you're still using Angular 8 or older, remember to add the content
-  component in the <code>entryComponents</code> section of your
-  <code>NgModule</code>. For Angular 9 or newer, it's not needed anymore.
-</p>
-
-}
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">...</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
