--- a/src/app/components/card-house-user/card-house-user.component.html
+++ b/src/app/components/card-house-user/card-house-user.component.html
@@ -1,4 +1,8 @@
-<div class="card m-2" style="width: 18rem">
+<div
+  class="card m-2"
+  style="width: 18rem"
+  routerLink="/homepage/houseDetails/{{ userHouse.id }}"
+>
   <img class="card-img-top" src="{{ userHouse.houseImg }}" alt="img_house" />
   <div class="info-card pt-2">
     <p><strong>Interno: </strong> {{ userHouse.interno }}</p>
@@ -9,19 +13,5 @@
       {{ userHouse.user.surname }}
     </p>
     <p *ngIf="!userHouse.user"><strong>Proprietario: </strong>nessuno</p>
-  </div>
-  <div class="d-flex">
-    <button
-      class="btn btn-primary mx-2"
-      routerLink="/homepage/paymentHomepage/{{ userHouse.id }}"
-    >
-      Pagamenti
-    </button>
-    <button
-      class="btn btn-success"
-      routerLink="/homepage/usageHomepage/{{ userHouse.id }}"
-    >
-      Usi e Consumi
-    </button>
   </div>
 </div>
