--- a/src/app/components/sidebar-homepage/sidebar-homepage.component.css
+++ b/src/app/components/sidebar-homepage/sidebar-homepage.component.css
@@ -9,6 +9,9 @@
 }
 #profile {
   background-color: var(--white-EasyHome);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #profile p {
   font-weight: bold;
@@ -28,8 +31,9 @@ button {
   font-weight: bold;
 }
 button:hover {
-  background-color: var(--button-orange);
-  border: solid 2px var(--border-button-orange);
+  background-color: var(--white-EasyHome);
+  border: solid 2px var(--blue-EasyHome);
+  color: var(--blue-EasyHome);
 }
 
 /*media query mobile version*/
