--- a/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
+++ b/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
@@ -2,7 +2,9 @@
 <!--inizio SearchBar-->
 <nav class="navbar navbar-light bg-light rounded mb-4">
   <form class="d-flex">
-    <div class="d-flex p-2 align-items-center">
+    <div
+      class="d-flex p-2 align-items-center flex-wrap flex-md-nowrap flex-lg-nowrap"
+    >
       <label class="mx-2" for="UserEntity">Propietario: </label>
       <input
         class="form-control mr-sm-2"
