--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -34,14 +34,14 @@
   <!-- Section: Social media -->
 
   <!-- Section: Links  -->
-  <section class="">
+  <section>
     <div class="container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
-          <div class="d-flex align-items-end mb-3">
+          <div id="containerLogoFooter" class="d-flex align-items-end mb-3">
             <div>
               <img id="logo" src="/assets/logo2.png" alt="alt_logo" />
             </div>
@@ -61,7 +61,10 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <div
+          id="contacts"
+          class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"
+        >
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contatti amministratore:</h6>
           <div class="d-flex align-items-baseline">
