--- a/src/app/components/table-notification/table-notification.component.css
+++ b/src/app/components/table-notification/table-notification.component.css
@@ -33,7 +33,16 @@ thead tr th {
 /*media query mobile version*/
 @media only screen and (max-width: 767px) {
   table {
-    width: 95vw;
-    margin-left: 2.5vw;
+    width: 100vw;
+    margin-left: 0px;
+  }
+  th,
+  td {
+    padding: 5px;
+    text-align: left;
+  }
+  button svg {
+    padding-right: 0px;
+    transform: translateX(3px);
   }
 }
