--- a/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.css
+++ b/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.css
@@ -48,3 +48,21 @@ form button {
   color: var(--blue-EasyHome);
   font-weight: bold;
 }
+/*media query mobile version*/
+@media only screen and (max-width: 767px) {
+  h2 {
+    margin-left: 0px;
+    text-align: center;
+  }
+
+  form {
+    width: 90vw;
+    margin-left: 5%;
+    border-radius: 5px;
+    padding: 5%;
+  }
+  form button {
+    right: -70%;
+    color: var(--white-EasyHome);
+  }
+}
