--- a/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.html
+++ b/src/app/sections-backoffice/section-register-new-user/section-register-new-user.component.html
@@ -65,8 +65,6 @@
         Inserisci Cellulare
       </p>
     </div>
-
-    <!--TO DO: aggiungere riconfermare password-->
   </div>
   <div class="d-flex justify-content-start flex-wrap mb-5">
     <div>
@@ -216,7 +214,7 @@
     <div class="d-flex flex-wrap">
       @for (house of listFreeHouse; track house) {
       <app-card-free-house
-        class="m-2"
+        class="me-2"
         [freeHouse]="house"
         [ngClass]="
           house.id == houseSelected?.id ? 'borderSelected' : 'borderNone'
