--- a/src/app/sections-homepage/info-user/info-user.component.html
+++ b/src/app/sections-homepage/info-user/info-user.component.html
@@ -124,7 +124,13 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           annulla
         </button>
-        <button type="button" class="btn btn-primary">Salva modifica</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="sendUpdateUser()"
+        >
+          Salva modifica
+        </button>
       </div>
     </div>
   </div>
